--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "dayjs": "^1.10.6",
     "file-saver": "^2.0.5",
     "html2canvas": "^1.3.2",
+    "payment": "^2.4.6",
     "qs": "^6.10.1",
     "react": "^17.0.0",
+    "react-credit-cards-2": "^1.0.1",
     "react-dom": "^17.0.2",
-    "react-icons": "^4.2.0",
+    "react-icons": "^4.10.1",
     "react-input-mask": "^2.0.4",
     "react-loader-spinner": "^4.0.0",
     "react-router-dom": "^6.3.0",
@@ -28,7 +30,7 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
